--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 
 {
   "name": "azy",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "happy program",
   "main": "server.js",
   "scripts": {
@@ -11,7 +11,8 @@
     "discord.js": "14.21.0",
     "node-fetch": "3.3.2",
     "dotenv": "^16.1.4",
-    "express": "^5.0.1"
+    "express": "^5.0.1",
+    "gpt-tokenizer": "^2.2.1"
   },
   "engines": {
     "node": "18.x"
