--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 
 {
   "name": "azy",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "happy program",
   "main": "server.js",
   "scripts": {
@@ -12,7 +12,8 @@
     "node-fetch": "3.3.2",
     "dotenv": "^16.1.4",
     "express": "^5.0.1",
-    "gpt-tokenizer": "^2.2.1"
+    "gpt-tokenizer": "^2.2.1",
+    "btch-downloader": "2.8.3"
   },
   "engines": {
     "node": "18.x"
