--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 
 {
   "name": "azy",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "happy program",
   "main": "server.js",
   "scripts": {
@@ -13,7 +13,8 @@
     "dotenv": "^16.1.4",
     "express": "^5.0.1",
     "gpt-tokenizer": "^2.2.1",
-    "btch-downloader": "2.8.3"
+    "btch-downloader": "2.8.3",
+    "undici": "5.27.2"
   },
   "engines": {
     "node": "18.x"
